Fix alignment

--- a/style.css
+++ b/style.css
@@ -6,6 +6,18 @@
  body {
      font-family: CaskydiaCoveNerdFont;
      text-align: center;
+     display: flex;
+     align-items: center;
+     flex-direction: column;
+ }
+
+ .board {
+     width: 318px;
+     height: 318px;
+     display: inline-block;
+     box-shadow: 4px 4px 4px #0b263955;
+     text-align: center;
+     vertical-align: center;
  }
 
  .cell {
@@ -14,7 +26,7 @@
      border: 1.2px solid #476C9B;
      display: inline-block;
      text-align: center;
-     vertical-align: bottom;
+     vertical-align: middle;
      font-size: 27px;
      cursor: pointer;
      background-color: #ADD9F4;
@@ -38,45 +50,55 @@
  .mine {
      width: 30px;
      height: 30px;
-     border: 1.2px solid #F53326;
      display: inline-block;
      text-align: center;
      vertical-align: middle;
      font-size: 27px;
      cursor: pointer;
-     background-color: #F53326;
-     color: #101419;
+     background-color: #101419;
+     color: #F53326;
  }
 
- .lost {
-     width: 700px;
-     height: 700px;
+ .result {
      display: inline-block;
      margin-top: 10px;
      text-align: center;
      vertical-align: center;
-     font-size: 32px;
+     font-size: 42px;
+     cursor: pointer;
+     color: white;
+ }
+
+ .lost {
+     display: inline-block;
+     text-align: center;
+     vertical-align: center;
+     display: flex;
+     align-items: center;
+     font-size: 42px;
      cursor: pointer;
      color: white;
  }
 
  .restart {
-     width: 200px;
-     height: 50px;
+     position: relative;
+     top: 100px;
+     padding: 12px 18px;
      border-radius: 8px;
      border: 1.5px solid #476C9B;
+     box-shadow: 4px 4px 4px #0b263955;
      display: inline-block;
      text-align: center;
      vertical-align: middle;
+     font-family: CaskydiaCoveNerdFont;
      font-size: 27px;
      cursor: pointer;
-     background-color: #ADD9F4;
-     color: #D18069;
+     background-color: #6cadd5;
+     color: #383535;
+
  }
 
  .restart:hover {
-     width: 200px;
-     height: 50px;
      border-radius: 8px;
      border: 1.5px solid #355783;
      display: inline-block;
@@ -84,13 +106,11 @@
      vertical-align: middle;
      font-size: 27px;
      cursor: pointer;
-     background-color: #76a8c8;
-     color: #c35739;
+     background-color: #ADD9F4;
+     color: #857d7d;
  }
 
  .restart:active {
-     width: 200px;
-     height: 50px;
      border-radius: 8px;
      border: 1.5px solid #1a3250;
      display: inline-block;
@@ -98,6 +118,6 @@
      vertical-align: middle;
      font-size: 27px;
      cursor: pointer;
-     background-color: #5088b3;
-     color: #9b3f25;
+     background-color: #43779e;
+     color: rgb(40, 36, 36);
  }
